# PhotovoltaikDashboard

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/pv_dashboard/: __init__.py  calculation.py  cleaning.py  config.py  dashboard.py  server.py  storage.py
src/pv_dashboard/templates/: index.html
tests/: __init__.py  test_calculation.py  test_cleaning.py  test_integration.py  test_server.py  test_storage.py
